fixed typeform on mobile

--- a/index.css
+++ b/index.css
@@ -435,6 +435,9 @@ img{
       width: 85%;
       margin: auto;
     }
+		.center{
+		  width: 95%;
+		}
     .content-up{
       margin-top: -180px !important;
       transition: margin-top 0.3s linear;
